--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "@ngrx/store": "^10.0.1",
     "@ngrx/store-devtools": "^10.0.1",
     "date-fns": "^2.16.1",
+    "lodash.last": "^3.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
